--- a/src/container/Signup.module.css
+++ b/src/container/Signup.module.css
@@ -1,20 +1,32 @@
 .signupPage {
   text-align: center;
-  background-color: #508aa8;
+  background-color: #f9f9f9;
   height: 100vh;
   display: flex;
   justify-content: center;
   align-items: center;
 }
+.signupPage h1 {
+  font-size: 1.25rem;
+  font-weight: 700;
+}
+.signupPage p {
+  color: #62666d;
+  margin-top: 20px;
+  margin-bottom: 10px;
+}
 
 .container {
-  background: white;
+  background: #ffffff;
   padding: 20px;
   border-radius: 8px;
+  width: 40%;
+  min-width: 300px;
+  box-shadow: 0 1px 6px 0 rgb(0 0 0 / 10%);
+  text-align: right;
 }
 
 .signupForm {
-  max-width: 400px;
   padding: 20px;
   margin: 0 auto;
 }
@@ -26,23 +38,30 @@
 }
 
 .signupForm input {
-  background: #f1f1f1;
   display: block;
   width: 100%;
   padding: 10px;
   margin-top: 2px;
-  border: none;
+  border: 2px solid #edeeee;
+  border-radius: 5px;
+}
+
+.signupForm input:focus {
+  outline: 1px solid #0077ff;
 }
 
 .signupForm button {
   display: block;
   margin-top: 20px;
-  padding: 10px 20px;
+  padding: 15px 20px;
   background-color: #0077ff;
   color: white;
   border: none;
   border-radius: 4px;
-  font-size: 15px;
+  font-size: 16px;
+  font-family: inherit;
+  font-weight: bold;
   cursor: pointer;
   margin-left: auto;
+  width: 100%;
 }
