--- a/src/container/Addpost.module.css
+++ b/src/container/Addpost.module.css
@@ -14,3 +14,15 @@
 .form textarea {
   font-family: inherit;
 }
+
+@media only screen and (max-width: 1024px) {
+  .container {
+    width: 90%;
+  }
+}
+
+@media only screen and (max-width: 768px) {
+  .container {
+    flex-direction: column;
+  }
+}
