Set height of leaflet map for small screens

--- a/src/index.css
+++ b/src/index.css
@@ -19,3 +19,9 @@ body {
 .leaflet-container {
   height: 400px;
 }
+
+@media only screen and (max-width: 768px) {
+  .leaflet-container {
+    height: 200px;
+  }
+}
