--- a/src/container/PostPage.module.css
+++ b/src/container/PostPage.module.css
@@ -27,8 +27,21 @@
   color: #333333;
 }
 
+.wrapper {
+  display: flex;
+  flex-direction: row-reverse;
+}
+
 .info {
   display: flex;
   flex-direction: column;
   align-items: end;
+  margin-bottom: 20px;
+  flex: 1;
+}
+
+.location {
+  height: 200px;
+  flex: 1;
+  margin: 10px 0;
 }
