--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,7 +1,13 @@
 .container {
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
+}
+
+.content {
   text-align: center;
   background-color: #f9f9f9;
-  height: 100vh;
+  flex: 1;
   display: flex;
   justify-content: center;
   align-items: center;
