--- a/src/container/PostPage.module.css
+++ b/src/container/PostPage.module.css
@@ -35,7 +35,7 @@
 .info {
   display: flex;
   flex-direction: column;
-  align-items: end;
+  align-items: flex-end;
   margin-bottom: 20px;
   flex: 1;
 }
